microsvc-k8s/microsvc-app/k8s/microsvc-app-pod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-microsvc-app

---

apiVersion: v1
kind: Pod
metadata:
  name: microsvc-app
  namespace: ns-microsvc-app
spec:
  containers:
    - name: microsvc-app
      image: igavin/microsvc-app:v1
      ports:
        - containerPort: 18081
          name: appport
    - name: microsvc-mysql
      image: mysql:5.7
      imagePullPolicy: IfNotPresent
      args:  # 新版本镜像有更新，需要使用下面的认证插件环境变量配置才会生效
        - --default_authentication_plugin=mysql_native_password
        - --character-set-server=utf8mb4
        - --collation-server=utf8mb4_unicode_ci
      ports:
        - containerPort: 3306
          name: dbport
      volumeMounts:
        - name: db
          mountPath: /var/lib/mysql
  volumes:
    - name: db
      hostPath:
        path: /Users/igavinshang/Documents/igavinshang.proj/igavin-microsvc/microsvc-docker-compose/data/mysql
