microsvc-k8s/microsvc-app/k8s/microsvc-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-microsvc-app

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: microsvc-app
  namespace: ns-microsvc-app
  labels:
    app: app
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: microsvc-app
          image: igavin/microsvc-app:v1
          ports:
            - containerPort: 18081
              name: appport
          volumeMounts:
            - name: log-dir
              mountPath: /k8s-pod-log

      volumes:
        - name: log-dir
          hostPath:
            path: /tmp/k8s-pod-log


---
apiVersion: v1
kind: Service
metadata:
  name: microsvc-app
  namespace: ns-microsvc-app
spec:
  type: NodePort
  selector:
    app: app
  ports:
    - name: svcappport
      protocol: TCP
      port: 18081
      targetPort: appport
