microsvc-k8s/microsvc-app/k8s/microsvc-app-ingress.yaml
# just example, not tested
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: ns-microsvc-app
  name: microsvc-ingress
spec:
  rules:
    - host: app.igavin.org
      http:
        paths:
        - path:
          backend:
            serviceName: microsvc-app
            servicePort: 18081
